# SudFrog

./: Makefile.am  Makefile.in  configure  configure.in
bins/: Makefile.in
bins/CompareFaces/: Makefile.am  Makefile.in  main.cpp
bins/CompareTemplates/: Makefile.am
bins/GetPerformance/: Makefile.in
bins/SpaceLearner/: Makefile.in  main.cpp
bins/TemplateFace/: main.cpp
bins/TemplateList/: main.cpp
bins/frgc_run/: Makefile.am  Makefile.in
bins/mbgc_run/: Makefile.am
examples/: PFC_param.xml  TestList.txt
html/: _compare_faces_2main_8cpp.html  _compare_faces_2main_8cpp__incl.md5  _compare_list_2main_8cpp.html  _compare_list_2main_8cpp__incl.map  _compare_templates_2main_8cpp.html  _compare_templates_2main_8cpp__incl.md5  _get_performance_8cpp.html  _get_performance_8cpp__incl.md5  _learning_8xml.html  _normfaces_2main_8cpp.html  _normfaces_2main_8cpp__incl.md5  _p_f_c__param_8xml.html  _t_m_s_p__image_8cpp.html  _t_m_s_p__image_8cpp__incl.map  _t_m_s_p__image_8cpp__incl.md5  _t_m_s_p_face_8h.html  _t_m_s_p_face_8h_source.html  _template_face_2main_8cpp.html  _template_face_2main_8cpp__incl.md5  _template_list_2main_8cpp.html  _test_list_8lst.html  annotated.html  class_t_m_s_p___face___space_1_1_comparator.html  class_t_m_s_p___face___space_1_1_comparator__coll__graph.md5  class_t_m_s_p___face___space_1_1_gaborate__coll__graph.map  class_t_m_s_p___face___space_1_1_linear_reducer.html  class_t_m_s_p___face___space_1_1_non_linear_reducer.html  class_t_m_s_p___face___space_1_1_non_linear_reducer__coll__graph.map  class_t_m_s_p___face___space_1_1_p_f_cface.html  class_t_m_s_p___face___space_1_1_p_f_cface__coll__graph.map  class_t_m_s_p___face___space_1_1_pfc___image.html  class_t_m_s_p___face___space_1_1_templator.html  class_t_m_s_p___face___space_1_1_templator__coll__graph.map  class_t_m_s_p___face___space_1_1inputs.html  class_t_m_s_p___face___space_1_1inputs__coll__graph.map  class_t_m_s_p___face___space_1_1inputs__coll__graph.md5  class_t_m_s_p___face___space_1_1kernel__coll__graph.map  class_t_m_s_p___face___space_1_1kernel__coll__graph.md5  class_t_m_s_p___face___space_1_1verbose.html  class_t_m_s_p___face___space_1_1verbose__coll__graph.map  (+109 more)
lib/: TMSPFace.h
lib/TMSPFace/: Gross.cpp  TMSP_image.cpp  comparator.cpp  gaborate.cpp  inputs.cpp  kernel.cpp  mask.cpp  miscellaneous.cpp  nonlinearreducer.cpp  templator.cpp  verbose.cpp
lib/include/: comparator.h  jpegutilities.h  linearreducer.h  mask.h  miscellaneous.h  timer.h  vectorextension.h  verbose.h
lib/newmat/: Matrix_util.h  bandmat.cpp  controlw.h  include.h  myexcept.cpp  myexcept.h  newfft.cpp  newmat.h  newmat2.cpp  newmat3.cpp  newmat4.cpp  newmat5.cpp  newmat6.cpp  newmat7.cpp  newmatap.h  newmatex.cpp  newmatnl.cpp  newmatrc.h  newmatrm.h  nm_misc.cpp  solution.cpp  solution.h  sort.cpp  svd.cpp  tmt.cpp  tmt.h  tmt4.cpp  tmt5.cpp  tmt8.cpp  tmt9.cpp  tmta.cpp  tmtc.cpp  tmte.cpp  tmtg.cpp  tmtk.cpp  tmtl.cpp  tmtm.cpp
lib/xmlparser/: Makefile.in  loadfromxml.cpp  loadfromxml.h  xpath_expression.cpp  xpath_expression.h  xpath_stream.h  xpath_syntax.cpp
sudfrog/: AUTHORS  HOWTO-FRGC.txt  INSTALL  Readme-Sudfrog.txt
sudfrog/bins/: Makefile.am
sudfrog/bins/CompareList/: Makefile.am  Makefile.in  main.cpp
sudfrog/bins/CompareTemplates/: Makefile.in  main.cpp
sudfrog/bins/GetPerformance/: GetPerformance.cpp  Makefile.am
sudfrog/bins/Normfaces/: Makefile.am  Makefile.in  main.cpp
sudfrog/bins/SpaceLearner/: Makefile.am
sudfrog/bins/TemplateFace/: Makefile.am  Makefile.in
sudfrog/bins/TemplateList/: Makefile.am  Makefile.in
sudfrog/bins/frgc_run/: main.cpp
sudfrog/bins/mbgc_run/: Makefile.in  main.cpp
sudfrog/examples/: Learning.xml
sudfrog/html/: _compare_list_2main_8cpp__incl.md5  _gross_8cpp.html  _gross_8cpp__incl.md5  _space_learner_2main_8cpp.html  _space_learner_2main_8cpp__incl.md5  _t_m_s_p__image_8h.html  _t_m_s_p__image_8h__incl.map  _t_m_s_p__image_8h__incl.md5  _t_m_s_p__image_8h_source.html  _t_m_s_p_face_8h__incl.map  _t_m_s_p_face_8h__incl.md5  _template_list_2main_8cpp__incl.md5  class_t_m_s_p___face___space_1_1_gaborate.html  class_t_m_s_p___face___space_1_1_gaborate__coll__graph.md5  class_t_m_s_p___face___space_1_1_linear_reducer__coll__graph.map  class_t_m_s_p___face___space_1_1_linear_reducer__coll__graph.md5  class_t_m_s_p___face___space_1_1_mask.html  class_t_m_s_p___face___space_1_1_non_linear_reducer__coll__graph.md5  class_t_m_s_p___face___space_1_1_p_f_cface__coll__graph.md5  class_t_m_s_p___face___space_1_1_templator__coll__graph.md5  class_t_m_s_p___face___space_1_1_timer.html  class_t_m_s_p___face___space_1_1kernel.html  class_t_m_s_p___face___space_1_1verbose__coll__graph.md5  classinputarg.html  classinputarg__coll__graph.md5  comparator_8cpp__incl.map  comparator_8cpp__incl.md5  comparefaces.html  dir_000002_000012.html  dir_000003_000012.html  dir_000005_000012.html  dir_000006_000012.html  dir_000007_000012.html  dir_0ecfeb62ea0dc8c1ca96d935e918445d.html  dir_23a8cca6aafff294296ecec4f818fbdb.html  dir_28958f4309a31a6904d434f6bca55de0.html  dir_3abf17e877eab0a7a07cc3929b690ec2.html  dir_3abf17e877eab0a7a07cc3929b690ec2_dep.map  dir_4d045ccdc4ba87777b311e6afaf2be5b_dep.map  dir_6b023da48dc2b63a3492713c47010f8a.html  (+96 more)
sudfrog/lib/: Makefile.am  Makefile.in
sudfrog/lib/TMSPFace/: Makefile.am  Makefile.in  jpegutilities.cpp  linearreducer.cpp  pfcface.cpp  timer.cpp
sudfrog/lib/include/: TMSP_image.h  gaborate.h  inputs.h  kernel.h  nonlinearreducer.h  pfcface.h  templator.h
sudfrog/lib/newmat/: Makefile.am  Makefile.in  Matrix_util.cpp  cholesky.cpp  evalue.cpp  fft.cpp  hholder.cpp  jacobi.cpp  newmat1.cpp  newmat8.cpp  newmat9.cpp  newmatio.h  newmatnl.h  newmatrm.cpp  precisio.h  submat.cpp  tmt1.cpp  tmt2.cpp  tmt3.cpp  tmt6.cpp  tmt7.cpp  tmtb.cpp  tmtd.cpp  tmtf.cpp  tmth.cpp  tmti.cpp  tmtj.cpp
sudfrog/lib/xmlparser/: Makefile.am
