INCLUDES = 
METASOURCES = AUTO
noinst_LIBRARIES = libTMSPxmlparser.a
libTMSPxmlparser_a_SOURCES = action_store.cpp htmlutil.cpp lex_util.cpp \
	loadfromxml.cpp node_set.cpp tinystr.cpp tinyxml.cpp tinyxmlerror.cpp tinyxmlparser.cpp \
	tokenlist.cpp xml_util.cpp xpath_expression.cpp xpath_processor.cpp xpath_stack.cpp \
	xpath_static.cpp xpath_stream.cpp xpath_syntax.cpp
